# secondCompilerLab

./: CMakeLists.txt
src/algorithms/chain_rules_deleter/: chain_rules_deleter.cpp  chain_rules_deleter.h
src/algorithms/left_recursion_deleter/: left_recursion_deleter.cpp  left_recursion_deleter.h
src/grammar/: grammar_info.cpp  grammar_info.h
src/main/: main.cpp
src/tests/input/: 1_input.txt  2_input.txt  3_input.txt  4_input.txt  6_input.txt
src/tests/input_LR/: 1_expected.txt  1_input.txt  2_expected.txt  2_input.txt  3_expected.txt  3_input.txt  4_expected.txt  4_input.txt
src/tests/input_chain/: 1_expected.txt  2_expected.txt  3_expected.txt  3_input.txt  4_expected.txt  5_expected.txt  5_input.txt
src/tests/outputChainRulesDelete/: 1_output.txt  2_output.txt  3_output.txt  4_output.txt  5_output.txt  6_output.txt
src/tests/outputLRDelete/: 1_output.txt  2_output.txt  3_output.txt  4_output.txt  5_output.txt  6_output.txt
